MAT-17092: Removing unneccecary declerative boxing of primitives
AutoBoxing was introduced in JDK5 and simplifies the code.